--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -17,7 +17,8 @@ NAME = megaphone
 
 # Compiler
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3 $(FSAN)
+FSAN = -fsanitize=address
 RM = rm -f
 
 # Source and Object
