Makefile rules issue

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -47,7 +47,7 @@ $(NAME): $(OBJ)
 	@ $(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	@ echo $(CYAN)" 🥨 Cleaning Onject Files..."$(RESET)
+	@ echo $(CYAN)" 🥨 Cleaning Object Files..."$(RESET)
 	@ $(RM) $(OBJ)
 
 fclean: clean
